bug-064885 - The brands logos are not centrally aligned in the brand collections added to front end homepage

--- a/application/views/scss/components/_collection-product.scss
+++ b/application/views/scss/components/_collection-product.scss
@@ -238,7 +238,7 @@
             justify-content: center;
             align-items: center;
             flex-direction: column;
-            padding: 0;
+            // padding: 0;
             min-height: 50%;
             @include media-breakpoint-up(lg) {
                 min-height: 234px;
